[package]
name = "oc-http"
version = "0.1.0"
authors = ["Your Name <over.codes@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httparse = "1.3.4"
async-std = {version = "1.8.0", features = ["unstable", "attributes"]}
log = "0.4"
async-trait = "0.1.42"

[dev-dependencies]
env_logger = "0.8"
ureq = "1.5.4"