[package]
name = "oc-http"
version = "0.1.0"
authors = ["Your Name <over.codes@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httparse = "1.3.4"
log = "0.4"
futures = "0.3.8"

[dev-dependencies]
env_logger = "0.8"
ureq = "1.5.4"
async-std = {version = "1.8", features = ["attributes"]}
lazy_static = "1.4.0"
regex = "1"