[package]
name = "oc-http"
version = "0.1.0"
authors = ["Your Name <over.codes@protonmail.com>"]
edition = "2018"
description = "The HTTP library that doesn't do anything"
repository = "https://github.com/over-codes/oc-http"
homepage = "https://github.com/over-codes/oc-http"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httparse = "1.3.4"
log = "0.4"
futures = "0.3.8"

# needed for websockets
sha-1 = "0.9.2"
base64 = "0.13.0"
nom = "6"

# needed for cookies
cookie = { version = "0.14", features = ["percent-encode"]}

[dev-dependencies]
env_logger = "0.8"
ureq = "1.5.4"
async-std = {version = "1.8", features = ["attributes"]}
lazy_static = "1.4.0"
regex = "1"